# capscan-leaderboard

./: Cargo.toml  README.md  crates.txt
.github/workflows/: ci.yml  update.yml
data/: history.jsonl  snapshot.json
docs/: feed.xml  index.html
docs/badges/: aho-corasick.json  anyhow.json  autocfg.json  base64.json  block-buffer.json  byteorder.json  bytes.json  cc.json  chrono.json  clap.json  crossbeam-utils.json  errno.json  fnv.json  futures-channel.json  futures-sink.json  futures-task.json  futures-util.json  generic-array.json  getrandom.json  h2.json  hashbrown.json  http.json  hyper.json  idna.json  indexmap.json  itertools.json  lazy_static.json  libc.json  linux-raw-sys.json  lock_api.json  log.json  memchr.json  mio.json  once_cell.json  parking_lot.json  parking_lot_core.json  percent-encoding.json  pin-project-lite.json  ppv-lite86.json  proc-macro2.json  (+26 more)
src/: main.rs
