[package]
name = "capscan-leaderboard"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
capscan = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[dev-dependencies]
tempfile = "3"
