[package]
name = "capscan-leaderboard"
version = "0.1.0"
edition = "2021"
description = "Track a curated crates.txt of crates.io crates over time with capscan, and publish a static leaderboard (HTML + Atom feed + shields.io badges) of which ones gained new capability signals."
license = "MIT OR Apache-2.0"
repository = "https://github.com/poglesbyg/capscan-leaderboard"
readme = "README.md"
keywords = ["cargo", "security", "audit", "static-site", "capscan"]
categories = ["development-tools::cargo-plugins", "command-line-utilities"]

[dependencies]
capscan = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[dev-dependencies]
tempfile = "3"
